--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(415_project2 C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(415_project2 main.c)
+add_executable(415_project2 part1.c MCP.h)
